package com.olexyn.about.java.design.patterns.behavioural;

/*
 * Interpreter.
 * Given a language, define a representation for its grammar
 * along with an interpreter that uses the representation
 * to interpret sentences in the language.
 */

public class Interpreter {

}
